--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 streamlit==1.28.1
-pandas==2.1.3
+pandas>=2.2.0
 requests==2.31.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
