--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ lxml==4.9.3
 faiss-cpu==1.13.1
 google-generativeai==0.3.1
 python-dotenv==1.0.0
-pydantic==2.5.0
+pydantic>=2.8.0
 numpy==1.26.2
 tqdm==4.66.1
 selenium==4.15.2
